# chat_x

./: .env Example  .gitignore  Dockerfile  README.md  chat_x.yaml  database.db  estrutura.txt  pyproject.toml  start.sh
config/: config.yml  prompts.yml
src/app/: auth.py  authenticate.py  chat.py  client.py  genai.proto  genai_pb2.py  genai_pb2_grpc.py  grpc_client.py  main.py  message_handler.py  model.py  server.py  template.py  test.py  utils.py
src/app/state_graph/: graph_builder.py
tests/: test_genai.py  test_route_query.py
videos/: apresentacao.gif:Zone.Identifier  apresentacao2.gif:Zone.Identifier
