[project]
name = "chat-x"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "accelerate>=1.3.0",
    "duckduckgo-search>=7.2.1",
    "flask>=3.1.0",
    "grpcio>=1.69.0",
    "grpcio-tools>=1.69.0",
    "huggingface-hub>=0.27.1",
    "langchain>=0.3.14",
    "langchain-community>=0.3.14",
    "langchain-nvidia-ai-endpoints>=0.3.7",
    "langchain-openai>=0.3.1",
    "langgraph>=0.2.35",
    "nemoguardrails>=0.11.1",
    "nest-asyncio>=1.6.0",
    "openai>=1.59.8",
    "pytest>=8.3.4",
    "pytest-asyncio>=0.25.2",
    "python-dotenv>=1.0.1",
    "streamlit>=1.41.1",
]
